# SagittariusApp

./: .gitignore  .gitmodules  CMakeLists.txt  HMIConfig.json  Makefile  README.md  cfg explain.xlsx  cfg.json  demo_mingw.c  f1c100s_framebuffer
arch/x64/emscripten/: readme.txt
arch/x64/emscripten/tools/: emsdk_shell.html  preload.bat
arch/x64/emscripten/tools/web_info/: readme.txt
board/lion/: board.mk  system_board.c
board/lion/include/: gpio_board.h  licence.h  uart_board.h
board/pc/: board.mk  licence.c  system_board.c
board/pc/include/: gpio_board.h  licence.h  system_board.h
ico/: create_res.bat  project_ico.rc  project_ico.res
user_src/: main.c
